--- a/Ex.ipynb
+++ b/Ex.ipynb
@@ -354,7 +354,7 @@
    ],
    "source": [
     "plot((x .- 1) / 100, T_1, label=\"t = 0.25 h\")\n",
-    "xlabel!(\"x, sm\")\n",
+    "xlabel!(\"x, cm\")\n",
     "ylabel!(\"T(x), °C\")"
    ]
   },
@@ -623,7 +623,7 @@
    ],
    "source": [
     "plot((x .- 1) / 100, T_2,  label=\"t = 1 h\")\n",
-    "xlabel!(\"x, sm\")\n",
+    "xlabel!(\"x, cm\")\n",
     "ylabel!(\"T(x), °C\")"
    ]
   },
@@ -892,7 +892,7 @@
    ],
    "source": [
     "plot((x .- 1) / 100, T_3,  label=\"t = 10 h\")\n",
-    "xlabel!(\"x, sm\")\n",
+    "xlabel!(\"x, cm\")\n",
     "ylabel!(\"T(x), °C\")"
    ]
   },
